[Mac RTL] Fix the RTLness of the website settings bubble header.

BUG=696009

Review-Url: https://codereview.chromium.org/2714193004
Cr-Commit-Position: refs/heads/master@{#468159}

Former-commit-id: ae182230f56e92bc952ba62c8d6800e56f206008